--- a/Buttons/2023_11_07_Alert Buttons.html
+++ b/Buttons/2023_11_07_Alert Buttons.html
@@ -6,15 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alert Buttons</title>
     <style>
+        /* border	경계선을 제거
+            color	텍스트 색상을 설정
+            padding	요소의 내부 여백(패딩)을 지정 
+            cursor	마우스가 요소 위로 올라갔을 때 커서 모양을 설정
+            background-color	요소의 배경 색상을 설정
+            :hover 선택자	마우스가 요소 위에 올라갔을 때의 스타일을 설정 */
         .btn {
             border: none;
-            /* Remove borders */
+            /* 테두리 제거 */
             color: white;
-            /* Add a text color */
+            /* 텍스트 색 추가 */
             padding: 14px 28px;
-            /* Add some padding */
+            /* 패딩추가 */
             cursor: pointer;
-            /* Add a pointer cursor on mouse-over */
+            /* 마우스 오버에 포인터 커서 추가 */
         }
 
         .success {
@@ -71,6 +77,13 @@
     <button class="btn warning">Warning</button>
     <button class="btn danger">Danger</button>
     <button class="btn default">Default</button>
+
+    <!-- border	경계선을 제거
+    color	텍스트 색상을 설정
+    padding	요소의 내부 여백(패딩)을 지정 
+    cursor	마우스가 요소 위로 올라갔을 때 커서 모양을 설정
+    background-color	요소의 배경 색상을 설정
+    :hover 선택자	마우스가 요소 위에 올라갔을 때의 스타일을 설정 -->
 </body>
 
 </html>
