--- a/Converters/2023_11_08_Weight_Converter.html
+++ b/Converters/2023_11_08_Weight_Converter.html
@@ -9,7 +9,7 @@
 
 <body>
     <p>
-        <label>Pounds</label> <!-- "Pounds" 라벨을 표시합니다. -->
+        <label>Pounds</label> <!-- "Pounds" 라벨을 표시. -->
         <input id="inputPounds" type="number" placeholder="Pounds" oninput="weightConverter(this.value)"
             onchange="weightConverter(this.value)"> 
             <!-- 사용자 입력을 받는 파운드 입력 필드를 생성, 
