231118_Zebra Striped Table 실습

--- a/More/20231117_Fullscreen_Video.html
+++ b/More/20231117_Fullscreen_Video.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>20231117_Fullscreen_Video실습</title>
     <style>
         /* 비디오 스타일링: 화면 전체를 덮도록 100% 너비와 높이 지정 */
         #myVideo {
